# pip-planner

./: .gitignore  AGENTS.md  LICENSE  README.md  electron-builder.yml  package.json  pnpm-lock.yaml  pyproject.toml
assets/fonts/material-icons/: material-icons.css
electron/: main.js  server.js
launcher/: PipPlannerDevLauncher.cs  PipPlannerLauncher.cs
pip_planner/: __init__.py  chemistry.py  cli.py  genome.py  model.py  molecular_model.py  solubility.py  svg.py  web.py  web_entry.py
scripts/: build_backend.py  build_desktop.py  build_dev_launcher.py  build_windows.py  run_cli_harness.py  run_electron_server_harness.py  run_electron_smoke_harness.py  run_packaged_smoke_harness.py  run_splash_timing_harness.py  run_ui_browser_harness.py
tests/: __init__.py  electron_server_harness.js  test_chemistry.py  test_cli.py  test_genome.py  test_model.py  test_molecular_model.py  test_solubility.py  test_web_api.py  ui_browser_harness.js
tests/fixtures/genomes/: genomes.json
tests/fixtures/genomes/hela/: genome.fa
tests/fixtures/genomes/human-grch38/: annotations.gff3  genome.fa
tests/fixtures/genomes/private-reference/: genome.fa
